[maven-release-plugin] prepare release extscript-root-1.0.4
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1396999 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-bundles/extscript-myfaces20-bundle/pom.xml
+++ b/extscript-bundles/extscript-myfaces20-bundle/pom.xml
@@ -24,7 +24,7 @@
     <artifactId>extscript-myfaces20-bundle</artifactId>
     <packaging>jar</packaging>
     <name>MyFaces Extension Scripting MyFaces 2.0 convenience meta bundle</name>
-    <version>1.0.4-SNAPSHOT</version>
+    <version>1.0.4</version>
 
     <description>
         The meta bundle bundeling all needed core runtimes
@@ -34,7 +34,7 @@
     <parent>
         <groupId>org.apache.myfaces.extensions.scripting</groupId>
         <artifactId>extscript-bundles</artifactId>
-        <version>1.0.4-SNAPSHOT</version>
+        <version>1.0.4</version>
     </parent>
 
     <scm>
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>org.apache.myfaces.extensions.scripting</groupId>
             <artifactId>extscript-core</artifactId>
-            <version>1.0.4-SNAPSHOT</version>
+            <version>1.0.4</version>
         </dependency>
 
     </dependencies>
