[maven-release-plugin] rollback the release of extscript-root-1.0.4
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1397003 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <artifactId>extscript-root</artifactId>
     <packaging>pom</packaging>
     <name>Myfaces Extension Scripting Project</name>
-    <version>1.0.4</version>
+    <version>1.0.4-SNAPSHOT</version>
     <url>http://myfaces.apache.org/extensions/scripting</url>
     
     <properties>
