--- a/extscript-core-root/extscript-cdi/pom.xml
+++ b/extscript-core-root/extscript-cdi/pom.xml
@@ -20,7 +20,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>extscript-cdi</artifactId>
-    <version>1.0.4</version>
+    <version>1.0.4-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>MyFaces Extension Scripting Core</name>
 
@@ -31,7 +31,7 @@
     <parent>
         <groupId>org.apache.myfaces.extensions.scripting</groupId>
         <artifactId>extscript-core-root</artifactId>
-        <version>1.0.4</version>
+        <version>1.0.4-SNAPSHOT</version>
     </parent>
 
     <repositories>
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>org.apache.myfaces.extensions.scripting</groupId>
             <artifactId>extscript-core</artifactId>
-            <version>1.0.4</version>
+            <version>1.0.4-SNAPSHOT</version>
         </dependency>
         <!--
         <dependency>
