[maven-release-plugin] prepare for next development iteration
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1397016 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-examples/pom.xml
+++ b/extscript-examples/pom.xml
@@ -22,7 +22,7 @@
     <artifactId>extscript-examples</artifactId>
     <packaging>pom</packaging>
     <name>Examples Submodule</name>
-    <version>1.0.4</version>
+    <version>1.0.5-SNAPSHOT</version>
 
     <description>
         Examples Meta Project, see the subprojects
@@ -32,7 +32,7 @@
     <parent>
         <groupId>org.apache.myfaces.extensions.scripting</groupId>
         <artifactId>extscript-root</artifactId>
-        <version>1.0.4</version>
+        <version>1.0.5-SNAPSHOT</version>
     </parent>
 
     <scm>
