--- a/extscript-examples/blog-example/pom.xml
+++ b/extscript-examples/blog-example/pom.xml
@@ -22,14 +22,14 @@
     <parent>
         <artifactId>extscript-examples</artifactId>
         <groupId>org.apache.myfaces.extensions.scripting</groupId>
-        <version>1.0.4</version>
+        <version>1.0.5-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.myfaces.extensions.scripting</groupId>
     <artifactId>blog-example</artifactId>
     <packaging>war</packaging>
     <name>A simple blogging project using myfaces 2.0</name>
-    <version>1.0.4</version>
+    <version>1.0.5-SNAPSHOT</version>
     <url>http://www.apache.org</url>
 
     <scm>
@@ -90,7 +90,7 @@
         <dependency>
             <groupId>org.apache.myfaces.extensions.scripting</groupId>
             <artifactId>extscript-core</artifactId>
-            <version>1.0.4</version>
+            <version>1.0.5-SNAPSHOT</version>
         </dependency>
 
 
