adding the jruby compiler bindings
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1400845 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-core-root/extscript-core/pom.xml
+++ b/extscript-core-root/extscript-core/pom.xml
@@ -92,6 +92,11 @@
             <artifactId>groovy-all</artifactId>
             <version>${groovy.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.jruby</groupId>
+            <artifactId>jruby-complete</artifactId>
+            <version>1.7.0.preview2</version>
+        </dependency>
     </dependencies>
 
     <build>
