adding spring example
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1401682 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-examples/pom.xml
+++ b/extscript-examples/pom.xml
@@ -80,6 +80,7 @@
         <module>myfaces20-extscript-helloworld</module>
         <module>blog-example</module>
         <module>cdi-example</module>
+        <module>spring-example</module>
         <!--
         <module>spring-example</module>
         -->
