save state of affairs webapp now shot boot, and also ext-scripting
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1401685 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-core-root/extscript-spring/pom.xml
+++ b/extscript-core-root/extscript-spring/pom.xml
@@ -24,8 +24,27 @@
     <packaging>jar</packaging>
     <name>MyFaces Extension Scripting Core</name>
 
+    <parent>
+        <groupId>org.apache.myfaces.extensions.scripting</groupId>
+        <artifactId>extscript-core-root</artifactId>
+        <version>1.0.5-SNAPSHOT</version>
+    </parent>
+
     <description>
         Extension Scripting Spring Submodule
     </description>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.myfaces.extensions.scripting</groupId>
+            <artifactId>extscript-core</artifactId>
+            <version>1.0.5-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring</artifactId>
+            <version>2.5.6</version>
+        </dependency>
+    </dependencies>
 
 </project>
