--- a/extscript-examples/spring-example/pom.xml
+++ b/extscript-examples/spring-example/pom.xml
@@ -50,6 +50,12 @@
             <version>${myfaces2.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.myfaces.extensions.scripting</groupId>
+            <artifactId>extscript-spring</artifactId>
+            <version>1.0.5-SNAPSHOT</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework</groupId>
