--- a/extscript-examples/spring-example/src/main/webapp/WEB-INF/web.xml
+++ b/extscript-examples/spring-example/src/main/webapp/WEB-INF/web.xml
@@ -58,8 +58,13 @@
     </listener>
 
     <listener>
+        <!--
         <listener-class>
             org.springframework.web.context.ContextLoaderListener
+        </listener-class>
+        -->
+        <listener-class>
+            org.apache.myfaces.extensions.scripting.spring.context.CompilationAwareContextLoaderListener
         </listener-class>
         <!--
           <listener-class>
