EXTSCRIPT-44: testprobe1 accidentally overwritten
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1402003 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-core-root/extscript-cdi/pom.xml
+++ b/extscript-core-root/extscript-cdi/pom.xml
@@ -22,7 +22,7 @@
     <artifactId>extscript-cdi</artifactId>
     <version>1.0.5-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>MyFaces Extension Scripting Core</name>
+    <name>MyFaces Extension Scripting Core for Apache OWB</name>
 
     <description>
         Core of the MyFaces extensions.scripting
