EXTSCRIPT-177: finalizing the ruby context param adding examples for the ruby loader paths
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1402023 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-examples/myfaces20-example/src/main/webapp/WEB-INF/web.xml
+++ b/extscript-examples/myfaces20-example/src/main/webapp/WEB-INF/web.xml
@@ -56,6 +56,17 @@
         </param-value>
     </context-param>
 
+
+    <context-param>
+        <description>Additional comma separated loader paths to allow direct editing on the source
+        directories of the deployment dir.
+        </description>
+        <param-name>org.apache.myfaces.extensions.scripting.ruby.LOADER_PATHS</param-name>
+        <param-value>
+            /whatever/extscript-examples/myfaces20-example/src/main/webapp/WEB-INF/ruby
+        </param-value>
+    </context-param>
+
     <context-param>
         <description>resource paths for our custom JSF2 resource resolver</description>
         <param-name>org.apache.myfaces.extensions.scripting.resources.LOADER_PATHS</param-name>
@@ -63,6 +74,7 @@
             /whatever/extscript-examples/myfaces20-example/src/main/webapp
         </param-value>
     </context-param>
+
     -->
 
     <context-param>
