--- a/extscript-examples/pom.xml
+++ b/extscript-examples/pom.xml
@@ -28,6 +28,9 @@
         Examples Meta Project, see the subprojects
         for starting various parts of ext-scripting
     </description>
+    <properties>
+        <tomcat7-maven-plugin.version>2.0</tomcat7-maven-plugin.version>
+    </properties>
 
     <parent>
         <groupId>org.apache.myfaces.extensions.scripting</groupId>
@@ -36,17 +39,28 @@
     </parent>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.4/extscript-examples
+        <connection>
+            scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.4/extscript-examples
         </connection>
         <developerConnection>
             scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.4/extscript-examples
         </developerConnection>
-        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/tags/extscript-root-1.0.4/extscript-examples</url>
+        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/tags/extscript-root-1.0.4/extscript-examples
+        </url>
     </scm>
 
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>${tomcat7-maven-plugin.version}</version>
+                <configuration>
+                    <path>/</path>
+                    <port>9080</port>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
@@ -68,8 +82,6 @@
                 <artifactId>tomcat-maven-plugin</artifactId>
                 <version>1.0</version>
             </plugin>
-
-
         </plugins>
     </build>
     <modules>
