--- a/extscript-examples/spring-example/pom.xml
+++ b/extscript-examples/spring-example/pom.xml
@@ -79,14 +79,19 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring</artifactId>
-            <version>2.5.6</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
-            <version>2.1_3</version>
+            <version>${cglib.version}</version>
         </dependency>
     </dependencies>
+
+    <properties>
+        <spring.version>2.5.6</spring.version>
+        <cglib.version>2.1_3</cglib.version>
+    </properties>
 
 </project>
