EXTSCRIPT-179 adding the compiler
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1403727 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
         <module>extscript-core-root</module>
         <module>extscript-bundles</module>
         <module>extscript-examples</module>
+        <module>extscript-doccompiler</module>
     </modules>
 
     <scm>
