https://issues.apache.org/jira/browse/EXTSCRIPT-180 adding basic weld support code, but not much, does not work yet
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1406130 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-core-root/pom.xml
+++ b/extscript-core-root/pom.xml
@@ -44,6 +44,8 @@
         <module>extscript-core</module>
         <module>extscript-cdi</module>
         <module>extscript-spring</module>
+        <module>extscript-weld</module>
+
         <!--
         <module>extscript-myfaces12-extensions</module>
         <module>extscript-myfaces2-extensions</module>
