--- a/extscript-bundles/extscript-myfaces20-bundle/pom.xml
+++ b/extscript-bundles/extscript-myfaces20-bundle/pom.xml
@@ -38,15 +38,26 @@
     </parent>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.4/extscript-bundles/extscript-myfaces20-bundle</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.4/extscript-bundles/extscript-myfaces20-bundle</developerConnection>
-        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/tags/extscript-root-1.0.4/extscript-bundles/extscript-myfaces20-bundle</url>
+        <connection>
+            scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.4/extscript-bundles/extscript-myfaces20-bundle
+        </connection>
+        <developerConnection>
+            scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.4/extscript-bundles/extscript-myfaces20-bundle
+        </developerConnection>
+        <url>
+            http://svn.apache.org/viewvc/myfaces/extensions/scripting/tags/extscript-root-1.0.4/extscript-bundles/extscript-myfaces20-bundle
+        </url>
     </scm>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.myfaces.extensions.scripting</groupId>
             <artifactId>extscript-core</artifactId>
+            <version>1.0.5-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.myfaces.extensions.scripting</groupId>
+            <artifactId>extscript-myfaces</artifactId>
             <version>1.0.5-SNAPSHOT</version>
         </dependency>
 
@@ -75,7 +86,8 @@
                 <configuration>
                     <artifactSet>
                         <includes>
-                            <artifact>org.apache.myfaces.extensions.scripting:extscript-core</artifact>
+                            <include>org.apache.myfaces.extensions.scripting:extscript-core</include>
+                            <include>org.apache.myfaces.extensions.scripting:extscript-myfaces</include>
                         </includes>
                     </artifactSet>
                 </configuration>
