--- a/extscript-core-root/extscript-myfaces/pom.xml
+++ b/extscript-core-root/extscript-myfaces/pom.xml
@@ -19,35 +19,34 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>extscript-core-root</artifactId>
-    <packaging>pom</packaging>
-    <name>MyFaces Extension Scripting Core Engine</name>
+    <groupId>org.apache.myfaces.extensions.scripting</groupId>
+    <artifactId>extscript-myfaces</artifactId>
     <version>1.0.5-SNAPSHOT</version>
-
-    <description>
-         MyFaces Extension Scripting Core Meta Project
-    </description>
+    <packaging>jar</packaging>
+    <name>MyFaces Extension Scripting Core MyFaces Specific Subproject</name>
 
     <parent>
         <groupId>org.apache.myfaces.extensions.scripting</groupId>
-        <artifactId>extscript-root</artifactId>
+        <artifactId>extscript-core-root</artifactId>
         <version>1.0.5-SNAPSHOT</version>
     </parent>
-
-    <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.4/extscript-core-root</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.4/extscript-core-root</developerConnection>
-        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/tags/extscript-root-1.0.4/extscript-core-root</url>
-    </scm>
-
-    <modules>
-        <module>extscript-core</module>
-        <module>extscript-cdi</module>
-        <module>extscript-spring</module>
-        <module>extscript-myfaces</module>
-
-        <!--
-        <module>extscript-weld</module>
-        -->
-    </modules>
-</project>	
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.myfaces.core</groupId>
+            <artifactId>myfaces-api</artifactId>
+            <version>${myfaces2.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.myfaces.core</groupId>
+            <artifactId>myfaces-impl</artifactId>
+            <version>${myfaces2.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.myfaces.extensions.scripting</groupId>
+            <artifactId>extscript-core</artifactId>
+            <version>1.0.5-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+</project>
