--- a/extscript-examples/myfaces20-example/pom.xml
+++ b/extscript-examples/myfaces20-example/pom.xml
@@ -71,6 +71,54 @@
 
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>mojarra</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <dependencies>
+                 <dependency>
+                     <groupId>jsf</groupId>
+                     <artifactId>jsf</artifactId>
+                     <version>2.2-SNAPSHOT</version>
+                 </dependency>
+                 <dependency>
+                     <groupId>org.apache.myfaces.extensions.scripting</groupId>
+                     <artifactId>extscript-mojarra</artifactId>
+                     <version>1.0.5-SNAPSHOT</version>
+                 </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>myfaces</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.apache.myfaces.core</groupId>
+                    <artifactId>myfaces-api</artifactId>
+                    <version>${myfaces2.version}</version>
+                    <scope>compile</scope>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.apache.myfaces.core</groupId>
+                    <artifactId>myfaces-impl</artifactId>
+                    <version>${myfaces2.version}</version>
+                    <scope>compile</scope>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.apache.myfaces.extensions.scripting</groupId>
+                    <artifactId>extscript-myfaces</artifactId>
+                    <version>1.0.5-SNAPSHOT</version>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
+
 
     <dependencies>
         <!--
@@ -97,31 +145,10 @@
             <version>1.0.3-SNAPSHOT</version>
         </dependency>
         -->
-       <dependency>
-           <groupId>org.apache.myfaces.extensions.scripting</groupId>
-           <artifactId>extscript-core</artifactId>
-           <version>1.0.5-SNAPSHOT</version>
-       </dependency>
-
         <dependency>
-            <groupId>org.apache.myfaces.core</groupId>
-            <artifactId>myfaces-api</artifactId>
-            <version>${myfaces2.version}</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.myfaces.core</groupId>
-            <artifactId>myfaces-impl</artifactId>
-            <version>${myfaces2.version}</version>
-            <scope>compile</scope>
-        </dependency>
-
-
-        <dependency>
-            <groupId>javax.portlet</groupId>
-            <artifactId>portlet-api</artifactId>
-            <version>1.0</version>
+            <groupId>org.apache.myfaces.extensions.scripting</groupId>
+            <artifactId>extscript-core</artifactId>
+            <version>1.0.5-SNAPSHOT</version>
         </dependency>
 
         <!-- bean validation dependencies -->
@@ -131,13 +158,12 @@
              if you want to run bean validation
              and/or MyFaces ext-val
          -->
-
         <dependency>
             <groupId>org.apache.myfaces.extensions.validator</groupId>
             <artifactId>myfaces-extval-core</artifactId>
             <version>${extval.version}</version>
         </dependency>
-       <!--
+        <!--
         <dependency>
             <groupId>org.apache.myfaces.extensions.validator.validation-modules</groupId>
             <artifactId>myfaces-extval-property-validation</artifactId>
