--- a/extscript-examples/myfaces20-example/src/main/webapp/WEB-INF/web.xml
+++ b/extscript-examples/myfaces20-example/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,41 @@
         </param-value>
     </context-param>
 
+    <context-param>
+        <description>Additional comma separated loader paths to allow direct editing on the sources directory instead
+            of the deployment dir
+        </description>
+        <param-name>org.apache.myfaces.extensions.scripting.groovy.LOADER_PATHS</param-name>
+        <param-value>
+            /Users/werpu2/development/workspace/extscript_trunk/extscript-examples/myfaces20-example/src/main/webapp/WEB-INF/groovy
+        </param-value>
+    </context-param>
+    <context-param>
+        <description>Additional comma separated loader paths to allow direct editing on the sources directory instead
+            of the deployment dir
+        </description>
+        <param-name>org.apache.myfaces.extensions.scripting.java.LOADER_PATHS</param-name>
+        <param-value>
+            /Users/werpu2/development/workspace/extscript_trunk/extscript-examples/myfaces20-example/src/main/webapp/WEB-INF/java
+        </param-value>
+    </context-param>
+    <context-param>
+        <description>Additional comma separated loader paths to allow direct editing on the source
+            directories of the deployment dir.
+        </description>
+        <param-name>org.apache.myfaces.extensions.scripting.ruby.LOADER_PATHS</param-name>
+        <param-value>
+            /Users/werpu2/development/workspace/extscript_trunk/extscript-examples/myfaces20-example/src/main/webapp/WEB-INF/ruby
+        </param-value>
+    </context-param>
+
+    <context-param>
+        <description>resource paths for our custom JSF2 resource resolver</description>
+        <param-name>org.apache.myfaces.extensions.scripting.resources.LOADER_PATHS</param-name>
+        <param-value>
+            /Users/werpu2/development/workspace/extscript_trunk/extscript-examples/myfaces20-example/src/main/webapp
+        </param-value>
+    </context-param>
     <!--
     <context-param>
         <description>Additional comma separated loader paths to allow direct editing on the sources directory instead
@@ -75,8 +110,6 @@
         </param-value>
     </context-param>
 
-    -->
-
     <context-param>
         <description>a redirecting Facelet resource resolver which allows to pick up templates and resources from our
             source dir
@@ -84,6 +117,8 @@
         <param-name>facelets.RESOURCE_RESOLVER</param-name>
         <param-value>org.apache.myfaces.extensions.scripting.jsf.facelet.MyFacesReroutingResourceResolver</param-value>
     </context-param>
+    -->
+
 
 
 
@@ -114,8 +149,15 @@
     -->
 
     <!-- Listener, to allow Jetty serving MyFaces apps -->
+    <!--
     <listener>
         <listener-class>org.apache.myfaces.webapp.StartupServletContextListener</listener-class>
+    </listener>
+    -->
+    <listener>
+      <listener-class>
+        com.sun.faces.config.ConfigureListener
+      </listener-class>
     </listener>
 
     <!-- Faces Servlet -->
