--- a/extscript-examples/myfaces20-extscript-helloworld/pom.xml
+++ b/extscript-examples/myfaces20-extscript-helloworld/pom.xml
@@ -39,7 +39,9 @@
         <developerConnection>
             scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-examples/myfaces20-extscript-helloworld
         </developerConnection>
-        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/extscript-examples/myfaces20-extscript-helloworld</url>
+        <url>
+            http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/extscript-examples/myfaces20-extscript-helloworld
+        </url>
     </scm>
 
 
@@ -56,8 +58,59 @@
 
 
         </plugins>
-    </build>
 
+
+    </build>
+    <profiles>
+        <profile>
+            <id>myfaces</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.apache.myfaces.extensions.scripting</groupId>
+                    <artifactId>extscript-myfaces20-bundle</artifactId>
+                    <version>1.0.5-SNAPSHOT</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.myfaces.core</groupId>
+                    <artifactId>myfaces-api</artifactId>
+                    <version>${myfaces2.version}</version>
+                    <scope>compile</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.myfaces.core</groupId>
+                    <artifactId>myfaces-impl</artifactId>
+                    <version>${myfaces2.version}</version>
+                    <scope>compile</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>mojarra</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>jsf</groupId>
+                    <artifactId>jsf</artifactId>
+                    <version>2.2-SNAPSHOT</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.myfaces.extensions.scripting</groupId>
+                    <artifactId>extscript-core</artifactId>
+                    <version>1.0.5-SNAPSHOT</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.myfaces.extensions.scripting</groupId>
+                    <artifactId>extscript-mojarra</artifactId>
+                    <version>1.0.5-SNAPSHOT</version>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
     <dependencies>
         <!--
              optional Groovy include,
@@ -69,32 +122,23 @@
             <artifactId>groovy-all</artifactId>
             <version>${groovy.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>${scala-library.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-compiler</artifactId>
+            <version>${scala-library.version}</version>
+        </dependency>
         <!--
              Note this is the only dependency we need
              for ext-scripting, the include is a so called
              meta bundle, which includes the entire
              ext-scripting core+java6 support + myfaces 2 support
          -->
-        <dependency>
-            <groupId>org.apache.myfaces.extensions.scripting</groupId>
-            <artifactId>extscript-myfaces20-bundle</artifactId>
-            <version>1.0.5-SNAPSHOT</version>
-        </dependency>
 
-        <dependency>
-            <groupId>org.apache.myfaces.core</groupId>
-            <artifactId>myfaces-api</artifactId>
-            <version>${myfaces2.version}</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.myfaces.core</groupId>
-            <artifactId>myfaces-impl</artifactId>
-            <version>${myfaces2.version}</version>
-            <scope>compile</scope>
-        </dependency>
 
     </dependencies>
 </project>
