adding latest mojarra changes moving changes into bundle moving the config files into their respective implementation directories
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1414694 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-bundles/pom.xml
+++ b/extscript-bundles/pom.xml
@@ -47,6 +47,7 @@
 
     <modules>
         <module>extscript-myfaces20-bundle</module>
+        <module>extscript-mojarra-bundle</module>
     </modules>
 
 
