--- a/extscript-examples/cdi-example/pom.xml
+++ b/extscript-examples/cdi-example/pom.xml
@@ -79,25 +79,6 @@
              ext-scripting core+java6 support + myfaces 2 support
          -->
 
-        <dependency>
-            <groupId>org.apache.myfaces.core</groupId>
-            <artifactId>myfaces-api</artifactId>
-            <version>${myfaces2.version}</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.myfaces.core</groupId>
-            <artifactId>myfaces-impl</artifactId>
-            <version>${myfaces2.version}</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.myfaces.extensions.scripting</groupId>
-            <artifactId>extscript-myfaces20-bundle</artifactId>
-            <version>1.0.5-SNAPSHOT</version>
-        </dependency>
 
         <dependency>
             <groupId>org.apache.myfaces.extensions.scripting</groupId>
@@ -166,4 +147,56 @@
         </dependency>
 
     </dependencies>
+
+    <profiles>
+            <profile>
+                <id>mojarra</id>
+                <activation>
+                    <activeByDefault>false</activeByDefault>
+                </activation>
+                <dependencies>
+                     <dependency>
+                         <groupId>jsf</groupId>
+                         <artifactId>jsf</artifactId>
+                         <version>2.2-SNAPSHOT</version>
+                     </dependency>
+
+                     <dependency>
+                         <groupId>org.apache.myfaces.extensions.scripting</groupId>
+                         <artifactId>extscript-mojarra-bundle</artifactId>
+                         <version>1.0.5-SNAPSHOT</version>
+                     </dependency>
+
+                </dependencies>
+            </profile>
+            <profile>
+                <id>myfaces</id>
+                <activation>
+                    <activeByDefault>true</activeByDefault>
+                </activation>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.myfaces.core</groupId>
+                        <artifactId>myfaces-api</artifactId>
+                        <version>${myfaces2.version}</version>
+                        <scope>compile</scope>
+                    </dependency>
+
+                    <dependency>
+                        <groupId>org.apache.myfaces.core</groupId>
+                        <artifactId>myfaces-impl</artifactId>
+                        <version>${myfaces2.version}</version>
+                        <scope>compile</scope>
+                    </dependency>
+
+                    <dependency>
+                        <groupId>org.apache.myfaces.extensions.scripting</groupId>
+                        <artifactId>extscript-myfaces20-bundle</artifactId>
+                        <version>1.0.5-SNAPSHOT</version>
+                    </dependency>
+
+                </dependencies>
+            </profile>
+        </profiles>
+
 </project>
