--- a/extscript-core-root/extscript-myfaces/pom.xml
+++ b/extscript-core-root/extscript-myfaces/pom.xml
@@ -48,5 +48,21 @@
             <artifactId>extscript-core</artifactId>
             <version>1.0.5-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>${scala-library.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-compiler</artifactId>
+            <version>${scala-library.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 </project>
