--- a/extscript-examples/myfaces20-example/src/main/webapp/WEB-INF/web.xml
+++ b/extscript-examples/myfaces20-example/src/main/webapp/WEB-INF/web.xml
@@ -34,43 +34,8 @@
         </param-value>
     </context-param>
 
-    <context-param>
-        <description>Additional comma separated loader paths to allow direct editing on the sources directory instead
-            of the deployment dir
-        </description>
-        <param-name>org.apache.myfaces.extensions.scripting.groovy.LOADER_PATHS</param-name>
-        <param-value>
-            /Users/werpu2/development/workspace/extscript_trunk/extscript-examples/myfaces20-example/src/main/webapp/WEB-INF/groovy
-        </param-value>
-    </context-param>
-    <context-param>
-        <description>Additional comma separated loader paths to allow direct editing on the sources directory instead
-            of the deployment dir
-        </description>
-        <param-name>org.apache.myfaces.extensions.scripting.java.LOADER_PATHS</param-name>
-        <param-value>
-            /Users/werpu2/development/workspace/extscript_trunk/extscript-examples/myfaces20-example/src/main/webapp/WEB-INF/java
-        </param-value>
-    </context-param>
-    <context-param>
-        <description>Additional comma separated loader paths to allow direct editing on the source
-            directories of the deployment dir.
-        </description>
-        <param-name>org.apache.myfaces.extensions.scripting.ruby.LOADER_PATHS</param-name>
-        <param-value>
-            /Users/werpu2/development/workspace/extscript_trunk/extscript-examples/myfaces20-example/src/main/webapp/WEB-INF/ruby
-        </param-value>
-    </context-param>
-
-    <context-param>
-        <description>resource paths for our custom JSF2 resource resolver</description>
-        <param-name>org.apache.myfaces.extensions.scripting.resources.LOADER_PATHS</param-name>
-        <param-value>
-            /Users/werpu2/development/workspace/extscript_trunk/extscript-examples/myfaces20-example/src/main/webapp
-        </param-value>
-    </context-param>
-
-    <context-param>
+    <!--
+     <context-param>
         <description>a redirecting Facelet resource resolver which allows to pick up templates and resources from our
             source dir
         </description>
@@ -78,7 +43,6 @@
         <param-value>org.apache.myfaces.extensions.scripting.jsf.facelet.ReroutingResourceResolver</param-value>
     </context-param>
 
-    <!--
     <context-param>
         <description>Additional comma separated loader paths to allow direct editing on the sources directory instead
             of the deployment dir
@@ -88,7 +52,6 @@
             /whatever/extscript-examples/myfaces20-example/src/main/webapp/WEB-INF/groovy
         </param-value>
     </context-param>
-
 
     <context-param>
         <description>Additional comma separated loader paths to allow direct editing on the sources directory instead
@@ -100,7 +63,6 @@
         </param-value>
     </context-param>
 
-
     <context-param>
         <description>Additional comma separated loader paths to allow direct editing on the source
         directories of the deployment dir.
@@ -111,17 +73,35 @@
         </param-value>
     </context-param>
 
+     <context-param>
+        <description>Additional comma separated loader paths to allow direct editing on the source
+        directories of the deployment dir.
+        </description>
+        <param-name>org.apache.myfaces.extensions.scripting.ruby.LOADER_PATHS</param-name>
+        <param-value>
+            /whatever/extscript-examples/myfaces20-example/src/main/webapp/WEB-INF/scala
+        </param-value>
+    </context-param>
+
     <context-param>
-        <description>resource paths for our custom JSF2 resource resolver</description>
+        <description>resource paths for our custom JSF2 rerouting resource resolver</description>
         <param-name>org.apache.myfaces.extensions.scripting.resources.LOADER_PATHS</param-name>
         <param-value>
             /whatever/extscript-examples/myfaces20-example/src/main/webapp
         </param-value>
     </context-param>
 
-
+    <context-param>
+        <description>Some containers do not expand their war/ear files and do not return a proper classpath for the
+        compilers.
+        For those you can set an additional classpath as comma separated list of paths so that the compiler can pick
+        up dependencies from other directories. Wildcarding regarding jar and zip files is allowed.
+        </description>
+        <param-name>org.apache.myfaces.extensions.scripting.ADDITIONAL_CLASSPATH</param-name>
+        <param-value>/whatever/extscript-examples/myfaces20-example/target/myfaces20-extscript-helloworld-1.0.4-SNAPSHOT/WEB-INF/lib/*.jar,
+        /whatever/extscript-examples/myfaces20-example/target/myfaces20-extscript-helloworld-1.0.4-SNAPSHOT/WEB-INF/classes</param-value>
+    </context-param>
     -->
-
 
     <context-param>
         <param-name>javax.faces.PROJECT_STAGE</param-name>
