EXTSCRIPT-185 making the jruby support only enabled if there is a ruby jar present fixing a few licenses along the way
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1417431 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-examples/myfaces20-example/pom.xml
+++ b/extscript-examples/myfaces20-example/pom.xml
@@ -68,7 +68,6 @@
                 </configuration>
             </plugin>
 
-
         </plugins>
     </build>
     <profiles>
@@ -134,6 +133,16 @@
             <artifactId>groovy-all</artifactId>
             <version>${groovy.version}</version>
         </dependency>
+
+        <!--
+        LGPL so no depdendency allowed here, you however can add it yourself
+
+        <dependency>
+            <groupId>org.jruby</groupId>
+            <artifactId>jruby-complete</artifactId>
+            <version>1.6.8</version>
+        </dependency>
+        -->
 
         <!--
              Note this is the only dependency we need
