[maven-release-plugin] prepare release extscript-root-1.0.5
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1417817 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-doccompiler/pom.xml
+++ b/extscript-doccompiler/pom.xml
@@ -22,7 +22,7 @@
     <artifactId>extscript-doccompiler</artifactId>
     <packaging>pom</packaging>
     <name>MyFaces Extension Scripting Doccompiler</name>
-    <version>1.0.5-SNAPSHOT</version>
+    <version>1.0.5</version>
 
     <description>
          MyFaces Extension Scripting Core Meta Project
@@ -31,13 +31,13 @@
     <parent>
         <groupId>org.apache.myfaces.extensions.scripting</groupId>
         <artifactId>extscript-root</artifactId>
-        <version>1.0.5-SNAPSHOT</version>
+        <version>1.0.5</version>
     </parent>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-core-root</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-core-root</developerConnection>
-        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/extscript-core-root</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.5/extscript-core-root</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.5/extscript-core-root</developerConnection>
+        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/tags/extscript-root-1.0.5/extscript-core-root</url>
     </scm>
 
 
