--- a/extscript-examples/myfaces20-extscript-helloworld/pom.xml
+++ b/extscript-examples/myfaces20-extscript-helloworld/pom.xml
@@ -22,25 +22,25 @@
     <parent>
         <artifactId>extscript-examples</artifactId>
         <groupId>org.apache.myfaces.extensions.scripting</groupId>
-        <version>1.0.5</version>
+        <version>1.0.6-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.myfaces.extensions.scripting</groupId>
     <artifactId>myfaces20-extscript-helloworld</artifactId>
     <packaging>war</packaging>
     <name>A simple project for MyFaces 2.0 and Ext-Scripting 1.0</name>
-    <version>1.0.5</version>
+    <version>1.0.6-SNAPSHOT</version>
     <url>http://www.apache.org</url>
 
     <scm>
         <connection>
-            scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.5/extscript-examples/myfaces20-extscript-helloworld
+            scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-examples/myfaces20-extscript-helloworld
         </connection>
         <developerConnection>
-            scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.5/extscript-examples/myfaces20-extscript-helloworld
+            scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-examples/myfaces20-extscript-helloworld
         </developerConnection>
         <url>
-            http://svn.apache.org/viewvc/myfaces/extensions/scripting/tags/extscript-root-1.0.5/extscript-examples/myfaces20-extscript-helloworld
+            http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/extscript-examples/myfaces20-extscript-helloworld
         </url>
     </scm>
 
