[EXTSCRIPT-185] changing description of the module
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1419405 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-doccompiler/pom.xml
+++ b/extscript-doccompiler/pom.xml
@@ -25,7 +25,8 @@
     <version>1.0.6-SNAPSHOT</version>
 
     <description>
-         MyFaces Extension Scripting Core Meta Project
+         A XDOC to MTEXT compiler to move the content to the cms in the long run.
+		 
     </description>
 
     <parent>
