EXTSCRIPT-188: Fix for MyFaces 2.2.x
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1785181 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-core-root/extscript-core/pom.xml
+++ b/extscript-core-root/extscript-core/pom.xml
@@ -145,6 +145,8 @@
                 </dependencies>
             </plugin>
             <!-- scala tools plugin -->
+            <!-- we remove scala support for now because of incompatible changes in the scala class format
+
             <plugin>
                 <groupId>org.scala-tools</groupId>
                 <artifactId>maven-scala-plugin</artifactId>
@@ -184,6 +186,7 @@
                     </dependency>
                 </dependencies>
             </plugin>
+            -->
             <!--
                 we reuse the maven shader plugin to get rid of the
                 asm transitive dependency in the final build
